Copyright 1995-2002 Jonathan Hogg
.
This file is part of the usepackage distribution.
.
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.
.
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.
.
You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

2002-05-27  Jonathan Hogg  <jonathan@onegoodidea.com>

	* README: Updated to be less Glasgow-centric and match the new
	build style.

	* INSTALL: Short basic installation instructions.

2002-05-26  Jonathan Hogg  <jonathan@onegoodidea.com>

	* Makefile.am, configure.ac: Now using autoconf/automake to
	generate all of the build system.

	* usepackage.c: Small changes to the messages.
