@@ -5,12 +5,23 @@ usepackage_SOURCES = grammar.y match.c usepackage.c linked_list.c \
 	use.csh.in use.ksh.in use.1.in
 man_MANS = use.1
 pkgdata_DATA = use.bsh use.csh use.ksh
-dist_sysconf_CONF = usepackage.conf
 CLEANFILES = use.1 use.bsh use.csh use.ksh
 MAINTAINERCLEANFILES = grammar.c scanner.c configure Makefile.in \
 	depcomp install-sh missing mkinstalldirs
+DIST = usepackage.conf
 AM_YFLAGS = -d
 
 %: %.in
 	$(SED) "s,\@pkgdatadir\@,$(pkgdatadir),;s,\@bindir\@,$(bindir),;s,\@sysconfdir\@,$(sysconfdir)," < $*.in > $*
-	
+
+install-exec-local: usepackage.conf
+	@$(NORMAL_INSTALL)
+	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)
+	@if test -f $(DESTDIR)$(sysconfdir)/usepackage.conf; \
+	 then \
+	   echo "*** Existing usepackage.conf file, leaving it alone. ***"; \
+	 else \
+	   echo " $(INSTALL_DATA) usepackage.conf $(DESTDIR)$(sysconfdir)/"; \
+	   $(INSTALL_DATA) usepackage.conf $(DESTDIR)$(sysconfdir)/; \
+	 fi
+
